Updated small spacing issues on resume page

--- a/main-css/style.scss
+++ b/main-css/style.scss
@@ -58,7 +58,10 @@ body {
   
   h1 {font-size: var(--h1);}
   
-  h2 {font-size: var(--h2);}
+  h2 {
+      font-size: var(--h2);
+      color: var(--darkAccent);
+}
   
   h3 {font-size: var(--h3);}
   
@@ -82,11 +85,6 @@ a:active {
 
 a:visited {
     color: var(--darkAccent);
-}
-
-section {
-    margin-top: var(--marginTop);
-    padding: 0 3rem 3rem 3rem;
 }
 
 header {
@@ -135,6 +133,12 @@ nav {
         color: var(--dark);
     }
 }
+
+section {
+    margin-top: var(--marginTop);
+    padding: 0 2rem 2rem 2rem;
+}
+
 
 hr {
     border-top: 0.125rem solid var(--veryLightAccent);
@@ -189,7 +193,6 @@ hr {
 
 .resume {
     h2 {
-        color: var(--darkAccent);
         text-align: center;
         margin-bottom: 1.5rem;
     }
@@ -228,7 +231,7 @@ hr {
 
 .overview-content {
     display: grid;
-    grid-template-columns: 3rem 1fr 1fr 3rem;
+    grid-template-columns: 1rem 1fr 1fr 1rem;
     grid-gap: 1rem;
     h3 {
         text-align: center;
@@ -289,17 +292,13 @@ hr {
         grid-template-columns: 1fr;
     }
 
-    .overview-content {
-        grid-template-columns: 3rem 1fr 3rem;
-    }
-
     .tech-skills {
-        grid-column: 2 / 3;
+        grid-column: 2 / 4;
         
     }
     
     .soft-skills {
-        grid-column: 2 / 3;
+        grid-column: 2 / 4;
     }
 }
 
